@@ -166,9 +166,9 @@ RANLIBCMD=ranlib
 
 ### Whether profiling with gprof is supported
 # If yes: (e.g. x86/Linux, Sparc/Solaris):
-#PROFILING=prof
+#PROFILING=true
 # If no:
-#PROFILING=noprof
+#PROFILING=false
 
 ### Option to give to the C compiler for profiling
 #CC_PROFILE=-pg
